<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            app:cardBackgroundColor="@color/night_color"
            app:cardCornerRadius="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/_110sdp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvAvailable"
                    style="@style/TextView.Semibold"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:text="@string/open"
                    android:foreground="?selectableItemBackground"
                    android:textColor="@color/color_5CAC7D"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvOffline"
                    style="@style/TextView.Semibold"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:text="@string/close"
                    android:foreground="?selectableItemBackground"
                    android:textColor="@color/color_C6345C"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAvailable" />

                <TextView
                    android:id="@+id/tvBusy"
                    style="@style/TextView.Semibold"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:text="@string/busy"
                    android:foreground="?selectableItemBackground"
                    android:textColor="@color/color_D9AE56"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvOffline" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>