<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.rk_tech.riggle_runner.ui.main.create_store.CreateStoreVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/text_color_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_17sdp"
                android:onClick="@{v->vm.onClick(v)}"
                android:src="@drawable/ic_back_svg"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/iv_back"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/new_order"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                tools:ignore="RelativeOverlap" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_cart"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_20sdp"
                android:backgroundTint="@color/dark_gray_two"
                android:onClick="@{v->vm.onClick(v)}"
                app:cardCornerRadius="@dimen/_6sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_shopping_cart" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <TextView
            android:id="@+id/tvsearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/gilroy_medium"
            android:padding="@dimen/_5sdp"
            android:text="@string/shop_name"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <EditText
            android:id="@+id/etSearchStore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_round_gray_solid"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/black_85"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvsearch"
            app:layout_constraintWidth_percent=".9" />

        <TextView
            android:id="@+id/tvOwnerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/gilroy_medium"
            android:padding="@dimen/_5sdp"
            android:text="@string/owner_number"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSearchStore" />

        <EditText
            android:id="@+id/etOwnerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_round_gray_solid"
            android:drawableStart="@drawable/ic_nineone"
            android:drawablePadding="@dimen/_10sdp"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/black_85"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOwnerName"
            app:layout_constraintWidth_percent=".9" />

        <TextView
            android:id="@+id/tvPincode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/gilroy_medium"
            android:padding="@dimen/_5sdp"
            android:text="@string/pincode"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etOwnerName" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/acsPinCode"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="@+id/etPinCode"
            app:layout_constraintStart_toStartOf="@+id/etPinCode"
            app:layout_constraintTop_toTopOf="@+id/etPinCode" />

        <EditText
            android:id="@+id/etPinCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_round_gray_solid"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:onClick="@{v->vm.onClick(v)}"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/black_85"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPincode"
            app:layout_constraintWidth_percent=".9" />

        <ImageView
            android:id="@+id/ivCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_check_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPinCode" />

        <TextView
            android:id="@+id/tv_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/i_am_at_the_store_right_now"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/ivCheck"
            app:layout_constraintStart_toEndOf="@+id/ivCheck"
            app:layout_constraintTop_toTopOf="@+id/ivCheck" />

        <TextView
            android:id="@+id/tvNewStore"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/bg_orange_stroke_round_border"
            android:fontFamily="@font/font_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:onClick="@{v->vm.onClick(v)}"
            android:padding="@dimen/_5sdp"
            android:text="@string/create_new_store"
            android:textColor="@color/orange"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".9" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
